--- a/app/src/main/res/navigation/main_navigation.xml
+++ b/app/src/main/res/navigation/main_navigation.xml
@@ -8,8 +8,8 @@
     <fragment
         android:id="@+id/titleFragment"
         android:name="com.example.kompaspolityczny.screens.title.TitleFragment"
-        android:label="fragment_title"
-        tools:layout="@layout/fragment_title" >
+        android:label=" "
+        tools:layout="@layout/fragment_title">
         <action
             android:id="@+id/action_titleFragment_to_testFragment"
             app:destination="@id/testFragment" />
@@ -20,8 +20,8 @@
     <fragment
         android:id="@+id/testFragment"
         android:name="com.example.kompaspolityczny.screens.test.TestFragment"
-        android:label="test_fragment"
-        tools:layout="@layout/test_fragment" >
+        android:label=" "
+        tools:layout="@layout/test_fragment">
         <action
             android:id="@+id/action_testFragment_to_resultFragment"
             app:destination="@id/resultFragment"
@@ -32,7 +32,7 @@
     <fragment
         android:id="@+id/resultFragment"
         android:name="com.example.kompaspolityczny.screens.result.ResultFragment"
-        android:label="result_fragment"
+        android:label=" "
         tools:layout="@layout/result_fragment">
         <argument
             android:name="testResultKey"
@@ -47,8 +47,8 @@
     <fragment
         android:id="@+id/historyFragment"
         android:name="com.example.kompaspolityczny.screens.history.HistoryFragment"
-        android:label="fragment_history"
-        tools:layout="@layout/fragment_history" >
+        android:label="Historia testów"
+        tools:layout="@layout/fragment_history">
         <action
             android:id="@+id/action_historyFragment_to_resultFragment"
             app:destination="@id/resultFragment" />
