--- a/app/src/main/res/layout/result_fragment.xml
+++ b/app/src/main/res/layout/result_fragment.xml
@@ -6,6 +6,10 @@
     <data>
 
         <variable
+            name="result"
+            type="com.example.kompaspolityczny.database.TestResult" />
+
+        <variable
             name="resultViewModel"
             type="com.example.kompaspolityczny.screens.result.ResultViewModel" />
     </data>
@@ -222,8 +226,8 @@
 
             <RelativeLayout
                 android:id="@+id/relativeLayout3"
-                android:layout_width="128dp"
-                android:layout_height="128dp"
+                android:layout_width="300dp"
+                android:layout_height="300dp"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="16dp"
@@ -231,7 +235,15 @@
                 app:layout_constraintBottom_toTopOf="@+id/btn_delete"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/category4Left_textView" />
+                app:layout_constraintTop_toBottomOf="@+id/category4Left_textView">
+
+                <ImageView
+                    android:id="@+id/compass_image2"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    app:srcCompat="@drawable/ic_political_compass" />
+
+            </RelativeLayout>
 
             <Button
                 android:id="@+id/btn_delete"
