Dodanie obrazka kropki do result_fragment.xml

--- a/app/src/main/res/layout/list_item_test_result.xml
+++ b/app/src/main/res/layout/list_item_test_result.xml
@@ -49,6 +49,7 @@
                 app:testResultCompassImage="@{result}" />
 
             <ImageView
+                android:id="@+id/dot_image"
                 android:layout_width="6dp"
                 android:layout_height="6dp"
                 android:layout_alignParentEnd="true"
