--- a/app/src/main/res/layout/result_fragment.xml
+++ b/app/src/main/res/layout/result_fragment.xml
@@ -244,6 +244,16 @@
                     android:contentDescription="@string/political_compass_image_description"
                     app:srcCompat="@drawable/ic_political_compass" />
 
+                <ImageView
+                    android:id="@+id/dot_image"
+                    android:layout_width="18dp"
+                    android:layout_height="18dp"
+                    android:layout_alignParentEnd="true"
+                    android:layout_alignParentBottom="true"
+                    android:layout_centerInParent="true"
+                    android:contentDescription="@string/dot_image_description"
+                    app:srcCompat="@drawable/ic_dot" />
+
             </RelativeLayout>
 
             <Button
