--- a/app/src/main/res/layout/result_fragment.xml
+++ b/app/src/main/res/layout/result_fragment.xml
@@ -226,8 +226,8 @@
 
             <RelativeLayout
                 android:id="@+id/relativeLayout3"
-                android:layout_width="336dp"
-                android:layout_height="336dp"
+                android:layout_width="320dp"
+                android:layout_height="320dp"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="16dp"
@@ -245,9 +245,9 @@
                     app:srcCompat="@drawable/ic_political_compass" />
 
                 <ImageView
-                    android:id="@+id/dot_image"
-                    android:layout_width="18dp"
-                    android:layout_height="18dp"
+                    android:id="@+id/dot_image2"
+                    android:layout_width="24dp"
+                    android:layout_height="24dp"
                     android:layout_alignParentEnd="true"
                     android:layout_alignParentBottom="true"
                     android:layout_centerInParent="true"
