Revert "Ustawianie dot image w result_fragment.xml za pomocą bindowania, zmiana nazw bindowania."
This reverts commit 2a1c31f02e4e071a5b76e66fc3dc7b0b5e148523.

# Conflicts:
#	app/src/main/java/com/example/kompaspolityczny/screens/history/BindingUtils.kt

+ usunięcie niepotrzebnych println

--- a/app/src/main/res/layout/result_fragment.xml
+++ b/app/src/main/res/layout/result_fragment.xml
@@ -4,6 +4,11 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+
+        <variable
+            name="result"
+            type="com.example.kompaspolityczny.database.TestResult" />
+
         <variable
             name="resultViewModel"
             type="com.example.kompaspolityczny.screens.result.ResultViewModel" />
@@ -244,8 +249,8 @@
                     android:layout_width="24dp"
                     android:layout_height="24dp"
                     android:layout_alignParentEnd="true"
-                    app:testResultDotImageResultFragment="@{resultViewModel.result}"
                     android:layout_alignParentBottom="true"
+                    android:layout_centerInParent="true"
                     android:contentDescription="@string/dot_image_description"
                     app:srcCompat="@drawable/ic_dot" />
 
