--- a/app/src/main/res/layout/list_item_test_result.xml
+++ b/app/src/main/res/layout/list_item_test_result.xml
@@ -46,7 +46,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:contentDescription="@string/compass_image_description"
-                app:testResultCompassImageHistoryFragment="@{result}" />
+                app:testResultCompassImage="@{result}" />
 
             <ImageView
                 android:id="@+id/dot_image"
