--- a/app/src/main/res/layout/list_item_test_result.xml
+++ b/app/src/main/res/layout/list_item_test_result.xml
@@ -56,7 +56,7 @@
                 android:layout_alignParentBottom="true"
                 android:layout_centerInParent="true"
                 android:contentDescription="@string/dot_image_description"
-                app:testResultDotImage="@{result}" />
+                app:testResultDotImageHistoryFragment="@{result}" />
         </RelativeLayout>
 
         <TextView
